extensible kenrels are leading OS astray

--- a/notes/html/index.html
+++ b/notes/html/index.html
@@ -1,4 +1,6 @@
 <h1 id="index">Index</h1>
 <ul>
 <li><a href="template.html">Template</a></li>
+<li><a href="astray.html">Extensible Kernels are Leading OS Research
+Astray</a></li>
 </ul>
