--- a/notes/html/index.html
+++ b/notes/html/index.html
@@ -3,4 +3,10 @@
 <li><a href="template.html">Template</a></li>
 <li><a href="astray.html">Extensible Kernels are Leading OS Research
 Astray</a></li>
+<li><a href="xdp.html">The eXpress Data Path: Fast Programmable Packer
+Processing in the Operating System Kernel</a></li>
+<li><a href="packetshader.html">PacketShader: A GPU-Accelerated Software
+Router</a></li>
+<li><a href="biscuit.html">The benefits and costs of writing a POSIX
+kernel in a high level language</a></li>
 </ul>
